<resources>
    <string name="app_name">LuxeMart</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="total_price">Total: KES 0</string>
    <string name="place_order">Place Order</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup_prompt">Dont have an account? Sign up</string>


</resources>